@startuml PostfixCalculator_ClassDiagram

' Interfaces
interface IStack<T> {
  + push(value: T): void
  + pop(): T
  + peek(): T
  + isEmpty(): boolean
  + size(): int
  + clear(): void
}

interface ICalculator {
  + evaluate(expression: String): int
}

' Stack Implementation
class StackArrayList<T> {
  - elements: ArrayList<T>
  + StackArrayList()
  + push(value: T): void
  + pop(): T
  + peek(): T
  + isEmpty(): boolean
  + size(): int
  + clear(): void
}

' Calculator Implementation
class PostfixCalculator {
  - stack: IStack<Integer>
  + PostfixCalculator(stack: IStack<Integer>)
  + evaluate(expression: String): int
  - isOperator(token: String): boolean
  - isOperand(token: String): boolean
  - performOperation(a: int, b: int, operator: String): int
}

' Main Program
class Main {
  + {static} main(args: String[]): void
}

' Test Classes
class StackTest {
  - stack: IStack<Integer>
  + setUp(): void
  + testPushAndPop(): void
  + testPeek(): void
  + testIsEmpty(): void
  + testSize(): void
  + testClear(): void
  + testPopEmptyStack(): void
  + testPeekEmptyStack(): void
  + testMultiplePushPop(): void
  + testGenericWithStrings(): void
}

class CalculatorTest {
  - calculator: ICalculator
  + setUp(): void
  + testSimpleAddition(): void
  + testSimpleSubtraction(): void
  + testSimpleMultiplication(): void
  + testSimpleDivision(): void
  + testSimpleModulo(): void
  + testComplexExpression1(): void
  + testComplexExpression2(): void
  + testMultipleOperations(): void
  + testSingleNumber(): void
  + testMultiDigitNumbers(): void
  + testOrderOfOperands(): void
  + testDivisionByZero(): void
  + testModuloByZero(): void
  + testInsufficientOperands(): void
  + testTooManyOperands(): void
  + testInvalidCharacter(): void
  + testInvalidOperand(): void
  + testExpressionWithExtraSpaces(): void
  + testNegativeResults(): void
  + testComplexExpression3(): void
}

' Relationships
IStack <|.. StackArrayList : implements
ICalculator <|.. PostfixCalculator : implements
PostfixCalculator *-- IStack : uses
Main ..> IStack : creates
Main ..> ICalculator : creates
Main ..> StackArrayList : creates
Main ..> PostfixCalculator : creates
StackTest ..> IStack : tests
StackTest ..> StackArrayList : tests
CalculatorTest ..> ICalculator : tests
CalculatorTest ..> PostfixCalculator : tests
CalculatorTest ..> StackArrayList : uses

note right of IStack
  Interface genérica para
  implementar una Pila (Stack).
  Permite cualquier tipo T.
end note

note right of ICalculator
  ADT para calculadora postfix.
  Permite intercambiar
  implementaciones entre grupos.
end note

note bottom of StackArrayList
  Implementación de pila usando
  ArrayList (arreglo de tamaño
  variable) como se requiere.
end note

note bottom of PostfixCalculator
  Implementa el algoritmo de
  evaluación de expresiones postfix
  usando una pila de enteros.
end note

@enduml
